--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 <body Style =‘text-align: center; bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 </center>
 <center>
-<img src="images/PD-Prop-Web-REMI.jpg" alt="centered image" height="5780" width="1680">
+<img src="PD-Prop-Web-REMI.jpg" alt="centered image" height="5780" width="1680">
 </center>
